# controllers/Juegosplataforma.js
@@ -2,30 +2,74 @@
 
 var url = require('url');
 
-
+var utils = require('../utils/writer.js');
 var Juegosplataforma = require('../service/JuegosplataformaService');
 
 
-module.exports.createGame_PLatform = function createGame_PLatform (req, res, next) {
-  Juegosplataforma.createGame_PLatform(req.swagger.params, res, next);
+module.exports.createGame_Platform = function createGame_Platform (req, res, next) {
+  var body = req.swagger.params['body'].value;
+  Juegosplataforma.createGame_Platform(body)
+    .then(function (response) {
+      utils.writeJson(res, response, response.status);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
 };
 
-module.exports.deleteGame_platform = function deleteGame_platform (req, res, next) {
-  Juegosplataforma.deleteGame_platform(req.swagger.params, res, next);
+module.exports.deleteGame_Platform = function deleteGame_Platform (req, res, next) {
+  var idJuego = req.swagger.params['idJuego'].value;
+  var idGenero = req.swagger.params['idPlataforma'].value;
+  Juegosplataforma.deleteGame_Platform(idJuego, idGenero)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
 };
 
 module.exports.getAllGameByPlatformId = function getAllGameByPlatformId (req, res, next) {
-  Juegosplataforma.getAllGameByPlatformId(req.swagger.params, res, next);
+  var id = req.swagger.params['idPlataforma'].value;
+  Juegosplataforma.getAllGameByGenreId(id)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
 };
 
 module.exports.getAllGame_Platforms = function getAllGame_Platforms (req, res, next) {
-  Juegosplataforma.getAllGame_Platforms(req.swagger.params, res, next);
+  Juegosplataforma.getAllGame_Platforms()
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
 };
 
 module.exports.getAllPlatformByGameId = function getAllPlatformByGameId (req, res, next) {
-  Juegosplataforma.getAllPlatformByGameId(req.swagger.params, res, next);
+  var id = req.swagger.params['idJuego'].value;
+  Juegosplataforma.getAllPlatformByGameId(id)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
 };
 
 module.exports.updateGame_Platform = function updateGame_Platform (req, res, next) {
-  Juegosplataforma.updateGame_Platform(req.swagger.params, res, next);
+  var idJuego = req.swagger.params['idJuego'].value;
+  var idGenero = req.swagger.params['idPlataforma'].value;
+  var body = req.swagger.params['body'].value;
+  Juegosplataforma.updateGame_Platform(idJuego, idGenero, body)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
 };
